# Code

./: .gitignore  README.md  pyproject.toml
src/mednote/: __init__.py  cli.py
tests/: conftest.py  test_smoke.py
