[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mednote"
version = "0.1.0"
description = "Minimal scaffold for personal medical notes and light automation."
authors = [{ name = "Solo Clinician", email = "clinician@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
mednote = "mednote.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
